tests/compiler_errors/type_lists/allow_undefined_generics.tlp
with T
struct foo T B end 